--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
     --bg-color:#141110;
     --second-bg-color:#393e46;
     --text-color:#ededed;
-    --main-color:#f70776;
+    --main-color:#f70707e4;
 }
 html {
     font-size: 62.5%;
